tweak to ensure first image isn't too big for slides with just a single image in the content

--- a/style/style.css
+++ b/style/style.css
@@ -27,9 +27,6 @@ strong, b {font-weight:bold;}
 body
 {
 	font-family: "Anonymous", Arial, sans-serif;
-
-	/*max-width: 800px;
-	margin: 0px auto;*/
     
     width:100%;
     height:100%;
@@ -120,6 +117,11 @@ ul#keywords li
 section#content img
 {
     max-width:100%;
+}
+
+section#content p:first-child img
+{
+    max-width:50%;
 }
 
 section#content p, section#content ul
